applications/teams/timberops/groot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: groot
  namespace: timberops
  labels:
    app: groot
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: groot
