applications/teams/timberops/groot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groot
  labels:
    app: groot
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - groot.kcd.eso.pt
      secretName: groot-tls
  rules:
    - host: groot.kcd.eso.pt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: groot
                port:
                  number: 80
